<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D3D3D2D2"
        tools:context=".main.MainActivity"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="210dp"
            android:layout_marginBottom="150dp"
            android:layout_marginHorizontal="20dp"
            android:textStyle="bold"
            android:textColor="#2F47CD"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textSize="35sp"/>

        <Button
            android:id="@+id/ageBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="50dp"
            android:text="@string/move_age_screen_btn"
            android:backgroundTint="@android:color/secondary_text_light"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/leapYearBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="100dp"
            android:text="@string/move_leap_screen_btn"
            android:backgroundTint="@android:color/secondary_text_light"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>

