<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        tools:context=".agecalculate.AgeCalculateActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/birth_date_txt"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textAlignment="textEnd"
                android:padding="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/birthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/select_txt"
                android:textSize="20sp"
                android:padding="10dp"
                android:textStyle="normal"
                android:backgroundTint="@android:color/darker_gray" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/current_date_txt"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:padding="10dp"
                android:textStyle="normal"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/currentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/select_txt"
                android:padding="10dp"
                android:textSize="20sp"
                android:textStyle="normal"
                android:backgroundTint="@android:color/darker_gray" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/resultTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="16dp"
                android:textColor="#2F47CD"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/calculateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/calculate"/>

        </LinearLayout>


</LinearLayout>
    </ScrollView>